Cloaking Vue app to avoid flickering

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,10 @@ body .container {
   height:100%;
 }
 
+[v-cloak] {
+	display: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
